--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Bootstrap CSS link a un servidor-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
     <link rel="icon" type="image/png" href="./favicon.ico" type="img/x-icon">
     
 
@@ -42,12 +42,11 @@
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Productos
+                          Mas 
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Café-Arabica</a></li>
-                          <li><a class="dropdown-item" href="#">Café-Robusta</a></li>
-                          <li><a class="dropdown-item" href="#">Café-colombiano</a></li>
+                          <li><a class="dropdown-item" href="#">Sugerencias</a></li>
+                          <li><a class="dropdown-item" href="#">Galeria</a></li>
                         </ul>
                       </li>
                      
