primer registro tercerPreEntrega

--- a/pages/Interes.html
+++ b/pages/Interes.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Información sobre cortes recientes del Gas">
+    <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--logos-->
@@ -22,7 +24,8 @@
             <nav class="navbar slide  navbar-expand-lg navbar-light bg-ligth">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo gas.png" alt="logo Gas" width="60" height="48">
+                    <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
+                    <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
