--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Acá podrás encontrar información acerca de nosotros.">
+    <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--logos-->
@@ -22,9 +24,10 @@
             <nav class="navbar slide  navbar-expand-lg navbar-light bg-ligth">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo gas.png" alt="logo Gas" width="60" height="48">
+                    <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
+                    <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -68,6 +71,30 @@
 
                 </div>
            </section>
+           <section class="row alto mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-12 text-white col-md-6 columnaIzq d-flex flex-column justify-content-center align-items-center">
+                  <h4>Contacto</h4>
+                  <p>Dirección: Calle 25c Sur #29-29, Neiva, Colombia</p>
+                  <p>Teléfono: +57 3504380095</p>
+                  <p>Correo electrónico: </p>
+                </div>
+                <div class="col-sm-12 text-white col-lg-6 col-md-6 col-sm-12">
+                  <h4>Horarios</h4>
+                  <p>Lunes a Viernes: 8am - 5pm</p>
+                  <p>Sábados: 8am - 12pm</p>
+                  <p>Domingos: Cerrado</p>
+                </div>
+                <div class="col-sm-12 text-white  col-md-6 columnaIzq d-flex flex-column justify-content-center align-items-center">
+                  <h4>Mapa</h4>
+                  <p><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d15938.778432693094!2d-75.27146737625517!3d2.90402212037178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwNTQnMTQuOCJOIDc1wrAxNicxNy4yIlc!5e0!3m2!1ses!2sco!4v1683359756402!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+                </div>
+              </div>
+            </div>
+
+            </div>
+       </section>
          
         </main>   
     </div>
