--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contáctanos para realizar tu revisión.">
+    <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--logos-->
@@ -22,9 +24,10 @@
             <nav class="navbar slide  navbar-expand-lg navbar-light bg-ligth">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo gas.png" alt="logo Gas" width="60" height="48">
+                    <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
+                    <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -59,16 +62,16 @@
             <h2 class="text-white mt-5">Te contactaremos para programar tu visita</h2>
             <div class="row">
                 <div class="col">
-                    <form class="row">
+                    <form class="row" action="../pages/error404.html">
                         <div class="mb-3 col-12">
                           <label for="exampleInputEmail1" class="form-label text-white">Email</label>
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                           <div id="emailHelp" class="form-text">No guardaremos su mail para spam.</div>
                         </div>
                         <div class="mb-3 col-12">
-                          <label for="exampleInputPassword1" class="form-label text-white">Nombre</label>
-                          <input type="text" class="form-control" id="exampleInputName1" required>
-                        </div>
+                          <label for="exampleInputPassword1" class="form-label text-white">Direccion</label>
+                          <input type="text" class="form-control" id="exampleInputDireccion1" required>
+                      </div>
                         <div class="mb-3 col-12">
                             <label for="exampleInputPassword1" class="form-label text-white">Direccion</label>
                             <textarea name="" id="exampleInputComentario1" cols="30" rows="4" class="form-control"></textarea>
