--- a/pages/Sugerencias.html
+++ b/pages/Sugerencias.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Aquí obtendrás información y sugerencias para el día de tu revisión, además saber qué beneficios trae hacer tu revisión a tiempo.">
+    <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--logos-->
@@ -16,13 +18,14 @@
 
     <title>CRG-Proceso revisión</title>
   </head>
-  <body class="container-fluid fondo">
+  <body class="container-fluid fondo"  style="overflow-x: auto;">
     <div class="borroso">
         <header class="sticky-top">
             <nav class="navbar slide  navbar-expand-lg navbar-light bg-ligth">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo gas.png" alt="logo Gas" width="60" height="48">
+                    <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
+                    <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,7 +59,7 @@
           </header>
         <main class="container principal">
            <section class="row alto mt-5">
-                <div class="col-sm-12 col-md-6 columnaIzq d-flex flex-column justify-content-center align-items-center">
+                <div class="col-sm-12 col-md-6 columnaIzq d-flex flex-column justify-content-center align-items-center mb-3">
                     <h1 class="text-white">¿EN QUE 
                         <span class="colorGas">CONSISTE?</span>
                     </h1>
