--- a/pages/Interes.html
+++ b/pages/Interes.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Información sobre cortes recientes del Gas">
+    <meta name="description" content="Información sobre cortes recientes del Gas en CRG Neiva. Obtén detalles sobre los cortes y cómo afectan a los usuarios.">
+    <meta name="keywords" content="gas, cortes, información, CRG Neiva">
     <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="../favicon.ico" type="img/x-icon">
     
 
-    <title>CRG-CONTACTO</title>
+    <title>CRG-NOTICIAS DE INTERES</title>
   </head>
   <body class="container-fluid fondo">
     <div class="borroso">
@@ -27,11 +27,11 @@
                     <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
                     <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justificar w-100">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end w-100">
                       <li class="nav-item">
                         <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
                       </li>
@@ -47,7 +47,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="./Sugerencias.html">Sugerencias</a></li>
-                          <li><a class="dropdown-item" href="#">Interes</a></li>
+                          <li><a class="dropdown-item" href="#">Interés</a></li>
                         </ul>
                       </li>
                      
@@ -58,7 +58,7 @@
               </nav>
           </header>
         <main class="container principal">
-            <h1 class="text-white">AQUI PODRAS ENCONTRAR NOTICIAS DE INTERES</h1>
+            <h1 class="text-white">AQUÍ PODRÁS ENCONTRAR NOTICIAS DE INTERÉS.</h1>
             <h2 class="text-white mt-5"></h2>
             <div class="row">
                 <div class="col">
