--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Acá podrás encontrar información acerca de nosotros.">
     <meta name="author" content="CRG Neiva">
+    <meta name="keywords" content="CRG Inspecciones, seguridad, gas, inspección de gas, certificación de gas, reparación de gas, mantenimiento de gas">
+    
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--logos-->
@@ -27,11 +29,11 @@
                     <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
                     <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
-                  <button class="navbar-toggler-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justificar w-100">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end w-100">
                       <li class="nav-item">
                         <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
                       </li>
