--- a/pages/Sugerencias.html
+++ b/pages/Sugerencias.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Aquí obtendrás información y sugerencias para el día de tu revisión, además saber qué beneficios trae hacer tu revisión a tiempo.">
+    <meta name="description" content="Aquí obtendrás información y sugerencias para el día de tu revisión, además de conocer los beneficios de realizar tu revisión a tiempo.">
+    <meta name="keywords" content="revisión, sugerencias, beneficios, CRG Neiva">
     <meta name="author" content="CRG Neiva">
     <!--animated-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -21,17 +22,17 @@
   <body class="container-fluid fondo"  style="overflow-x: auto;">
     <div class="borroso">
         <header class="sticky-top">
-            <nav class="navbar slide  navbar-expand-lg navbar-light bg-ligth">
+            <nav class="navbar slide  navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html">
                     <img src="../assets/img/LogoGas.png" alt="logo Gas" width="60" height="48">
                     <span class="brand-name text-white">CRG INSPECCIONES NEIVA</span>
                   </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justificar w-100">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end w-100">
                       <li class="nav-item">
                         <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
                       </li>
@@ -43,11 +44,11 @@
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Mas 
+                          Más
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="#">Sugerencias</a></li>
-                          <li><a class="dropdown-item" href="./Interes.html">Interes</a></li>
+                          <li><a class="dropdown-item" href="./Interes.html">Interés</a></li>
                         </ul>
                       </li>
                      
@@ -60,7 +61,7 @@
         <main class="container principal">
            <section class="row alto mt-5">
                 <div class="col-sm-12 col-md-6 columnaIzq d-flex flex-column justify-content-center align-items-center mb-3">
-                    <h1 class="text-white">¿EN QUE 
+                    <h1 class="text-white">¿EN QUÉ
                         <span class="colorGas">CONSISTE?</span>
                     </h1>
                     <p class="text-white">Es la Inspección obligatoria y periódica que realiza un organismo de inspección acreditado por la ONAC, a la instalación interna de gas natural, orientado a realizar diferentes pruebas de hermeticidad, para garantizar el cumplimiento de las condiciones técnicas de seguridad exigidas.
